# hodlbook

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml
api/: index.html
api-reference/: index.html
concepts/: index.html
deployment/: index.html
docs/: api-reference.md  api.md  concepts.md  deployment.md  guide.md  index.md
examples/: README.md  demo.py
guide/: index.html
search/: search_index.json
src/hodlbook/: __init__.py  alerts.py  analytics.py  api.py  cli.py  errors.py  observability.py  orders.py  prices.py  repository.py  settings.py  storage.py  trading.py  valuation.py
tests/: conftest.py  test_alerts.py  test_analytics.py  test_api.py  test_auth.py  test_cli.py  test_observability.py  test_observability_api.py  test_orders.py  test_prices.py  test_repository.py  test_settings.py  test_smoke.py  test_storage.py  test_trading.py  test_valuation.py
